# tts_ros

./: README.md
audio_tts_msgs/: CMakeLists.txt  package.xml
audio_tts_msgs/action/: Communication.action  TTS.action
audio_tts_msgs/msg/: Audio.msg  AudioStamped.msg
examples/: tts_cancel.py
tts_ros/: CMakeLists.txt  package.xml  setup.py
tts_ros/config/model/: metadata.txt
tts_ros/config/speaker_embeddings/41/fear/: gpt_cond_latent_fear.pth  speaker_embedding_fear.pth
tts_ros/config/speaker_embeddings/41/happiness/: gpt_cond_latent_happiness.pth  speaker_embedding_happiness.pth
tts_ros/config/speaker_embeddings/41/neutral/: gpt_cond_latent_neutral.pth  speaker_embedding_neutral.pth
tts_ros/config/speaker_embeddings/41/surprise/: gpt_cond_latent_surprise.pth  speaker_embedding_surprise.pth
tts_ros/tts_ros/: tts.py  tts_node.py  utils.py
